# outh

./: .gitignore  LICESNSE  Makefile  README.md  compose.override.yml  compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  label-commenter-config.yml  labeler.yml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: assign-reviewers.yml  ci.yml  dependency-review.yml  label-commenter.yml  labeler.yml  release-dev.yml  release-drafter.yml  release-notes.yml  snyk.yml
.github/workflows/config/: reviewers.yml
app-service/: Cargo.toml  Dockerfile
app-service/assets/: app.js
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  api_schema.yml  build.rs  lambda.arm.Dockerfile  lambda.x86_64.Dockerfile  samconfig.toml  template.yaml
auth-service/.sqlx/: query-23f8c14432391c60d3ccf50af81708553dd54cc555acde1afd77e213d33e2cc0.json  query-39368a836092c98e5d727b8c0dc2b4860711cf7c0f0242ea8974e9dfbfe90993.json  query-995129f5461e40599fefa0fb08c9ef4068b67a056019ae4c1df986f7ae597979.json  query-a72d5d016f27a59fabcd26760c7edc978322298df8f03f4f27ddfd6b67733d03.json
auth-service/assets/: app.js  index.html
auth-service/migrations/: 20240904120306_create_users_table.down.sql  20240904120306_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/tests/api/data_structures/: helpers.rs  login.rs  logout.rs  mod.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/tests/api/postgres/: helpers.rs  login.rs  logout.rs  mod.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
docs/directories/: directories.md
docs/license/: header.txt
docs/releases/: v0.0.0.md
scripts/: license.sh
