#    Copyright 2024 Ibrahim Mbaziira
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.

[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5"}
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0.198", features = ["default", "derive"] }
serde_json = { version = "1.0.116", features = ["default"]}
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
validator = { version = "0.18.1", features = ["derive"]}
async-trait = { version = "0.1.80" }
rand = "0.8.5"

[dev-dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["json"]}
quickcheck = { version = "1.0.3" }
fake = { version = "2.9.2" }
quickcheck_macros = { version = "1.0.0" }
