#    Copyright 2024 Ibrahim Mbaziira
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.

[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lambda_binary"
path = "bin/lambda/lambda.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["cookie"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors", "trace"] }
serde = { version = "1.0.198", features = ["default", "derive"] }
serde_json = { version = "1.0.116", features = ["default"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
async-trait = { version = "0.1.80" }
rand = { version = "0.8.5" }
lambda_runtime = { version = "0.12.0" }
lambda_http = { version = "0.12.0" }
jsonwebtoken = { version = "9.2.0" }
chrono = { version = "0.4.35" }
dotenvy = { version = "0.15.7" }
lazy_static = { version = "1.4.0" }
hyper = { version = "1.4.1" }
http = { version = "1.1.0" }
tower = { version = "0.4.13" }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.26.1", features = ["tokio-comp"] }
test_helpers = { git = "https://github.com/code-sleuth/test-helpers.git", branch = "main" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-error = { version = "0.2.0" }
thiserror = { version = "1.0.58" }
color-eyre = { version = "0.6.3" }
secrecy = { version = "0.8.0", features = ["serde"] }
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls", "cookies"] }

[dev-dependencies]
reqwest = { version = "0.12.4", default-features = false, features = [
    "json",
    "cookies",
] }
quickcheck = { version = "1.0.3" }
fake = { version = "2.9.2" }
quickcheck_macros = { version = "1.0.0" }
wiremock = { version = "0.6.0" }
